--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -4,10 +4,33 @@
     border: 1px solid gray;
     margin-bottom: 20px;
     border-radius: 10px;
+    box-shadow: 0px 0px 3px 0px gray;
+    position: relative;
 }
 
 .banner-img{
     width: 230px;
+    height: 230px;
     padding: 10px;
     border-radius: 20px;
+}
+.banner-info{
+    padding: 8px;
+    margin-top: 0;
+}
+.btn-addToList{
+    width: 100%;
+    height: 40px;
+    background: #4d6bf1;
+    color:white;
+    font-size: 17px;
+    font-weight: 500;
+    border: 1px solid #95A0A7;
+    border-radius: 0px 0px 10px 10px;
+    position: absolute;
+    bottom: 0;
+    border: none;
+}
+.btn-addToList:hover{
+background-color: rgb(81, 0, 233);
 }
