--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
 }
 .home-container{
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 2fr;
     
 }
 .home-item1{
@@ -11,13 +11,16 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap: 20px;
     padding-left: 100px;
-    padding-right: 100px;
+    padding-right: 10px;
     margin-top: 20px;
+   background: lightblue;
 }
-.home-item2{
-    background-color: bisque;
-   position: fixed;
-   right: 0;
-   top: 0;
-   
+
+
+@media screen and (max-width:1000) {
+    .home-item1{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    
 }
