--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,6 +1,7 @@
 .cart-container{
     width: 100%;
     padding: 10px;
+    margin-right: 30px;
 }
 .cart-item1{
     display: flex;
@@ -25,28 +26,73 @@
     justify-content: space-around;
     background-color: lightgray;
     border-radius: 10px;
+    margin-right: 20px;
+    margin-top: 20px;
 }
-.item-kg {
+.item {
     color: gray;
     font-size: 12px;
 }
-.item-yr{
-    color: gray;
-    font-size: 12px;
-}
-.weight{
+.items{
     color: gray;
     font-weight: 500;
     margin-top: 0;
 }
-.height{
-    color: gray;
-    font-weight: 500;
-    margin-top: 0;
-}
-.age{
-    color: gray;
-    font-weight: 500;
-    margin-top: 0;
-}
+
 /* Details ends */
+/* Break start */
+.Break-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: lightgray;
+    border-radius: 10px;
+    margin-right: 20px;
+}
+.break-item{
+    background-color:white;
+    padding: 8px;
+    border-radius: 50%;
+    cursor:default;
+}
+/* Break end */
+/* Exercise info start */
+.exercise-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgray;
+    border-radius: 10px;
+    margin-right: 20px;
+    padding: 0px 10px;
+    margin-bottom: 10px;
+}
+.exercise-item{
+    color: gray;
+}
+.exercise-info2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgray;
+    border-radius: 10px;
+    margin-right: 20px;
+    padding: 0px 10px;
+}
+/* Exercise info end */
+/* activity button start */
+.activity-content{
+    text-align: center;
+}
+.activity-btn{
+    background-color: rgb(51, 51, 243);
+    color: white;
+    width: 80%;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 10px;
+    margin-top: 40px;
+    font-size: 17px;
+    font-weight: 500;
+}
+/* activity button end */
