--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -18,6 +18,9 @@
     padding: 8px;
     margin-top: 0;
 }
+.banner-info h5{
+    margin-top:0px ;
+}
 .btn-addToList{
     width: 100%;
     height: 40px;
