--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -1,3 +1,8 @@
+.question-container{
+    border: 1px solid gray;
+    border-radius: 20px;
+    padding: 20px;
+}
 .question1{
     background-color: rgb(215, 230, 230);
     padding: 20px;
