--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,8 +14,22 @@
     padding-right: 10px;
     margin-top: 20px;
 }
+@media screen and (max-width:600px) {
+    .home-container{
+        display: flex;
+        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .home-item1{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        
+        
+    }
+}
 
-@media screen and (max-width:1300px) {
+@media screen and (max-width:990px) and (min-width:620px) {
 .home-item1{
     display: grid;
     grid-template-columns: repeat(2,1fr);
