--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,17 +4,18 @@
 .home-container{
     display: grid;
     grid-template-columns: 3fr 2fr;
-    
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .home-item1{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-gap: 20px;
-    padding-left: 100px;
-    padding-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin-top: 20px;
 }
-@media screen and (max-width:600px) {
+@media screen and (max-width:740px) {
     .home-container{
         display: flex;
         flex-direction: column;
@@ -29,9 +30,26 @@
     }
 }
 
-@media screen and (max-width:990px) and (min-width:620px) {
-.home-item1{
+@media screen and (min-width:601px) and (max-width:990px) {
+    .home-container{
+        display: flex;
+        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding: 0px;
+    }
+    .home-item1{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    padding: 0px;
+    padding-left: 0px;
+    padding-right:0px;
 }    
+}
+@media screen and (min-width:990px) and (max-width:1500px) {
+    .home-container{
+        margin: 0;
+        padding: 0;
+    }
+    
 }
